@@ -1,0 +1,37 @@
+#
+#  Makefile for GXemul src/components
+#
+
+all: do_machines
+#do_busses do_cpu do_dummy do_machines do_memory
+
+do_busses:
+	cd busses; $(MAKE)
+
+do_cpu:
+	cd cpu; $(MAKE)
+
+do_dummy:
+	cd dummy; $(MAKE)
+
+do_machines:
+	cd machines; $(MAKE)
+
+do_memory:
+	cd memory; $(MAKE)
+
+clean:
+	#cd busses; $(MAKE) clean
+	#cd cpu; $(MAKE) clean
+	#cd dummy; $(MAKE) clean
+	cd machines; $(MAKE) clean
+	#cd memory; $(MAKE) clean
+
+clean_all: clean
+	#cd busses; $(MAKE) clean_all
+	#cd cpu; $(MAKE) clean_all
+	#cd dummy; $(MAKE) clean_all
+	cd machines; $(MAKE) clean_all
+	#cd memory; $(MAKE) clean_all
+	rm -f Makefile
+
